# worktreehq

./: .gitignore  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SCREENSHOTS.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: cla.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: claude_first_prompt.rs  claude_session.rs  claude_state.rs  config.rs  fs_probe.rs  gh_exec.rs  git_exec.rs  keychain.rs  mod.rs  notepads.rs  persistent_json.rs  pr_cache.rs  repo.rs  shell_exec.rs  shell_open.rs  subprocess.rs  watcher.rs  worktree_order.rs  worktree_sort_mode.rs
src/components/: RecentReposMenu.tsx  RepoBar.tsx  Tabs.tsx
src/hooks/: useKeyboardShortcuts.ts  useLiveRelativeTime.ts  useRepoBootstrap.ts  useTheme.ts
src/lib/: branchDisposition.test.ts  branchDisposition.ts  colors.ts  filters.test.ts  filters.ts  format.test.ts  format.ts  platform.ts  structuralShare.ts  worktreeFilters.test.ts  worktreeFilters.ts  worktreeOrder.test.ts  worktreeOrder.ts  yieldToMain.ts
src/services/: cacheUtils.test.ts  cacheUtils.ts  claudeAwarenessService.test.ts  claudeAwarenessService.ts  conflictDetector.test.ts  conflictDetector.ts  fetchErrorClassifier.test.ts  fetchErrorClassifier.ts  ghCliTransport.ts  (+20 more)
worktreehq/: PLAN.md  index.html  package.json  tsconfig.json
worktreehq/src-tauri/: Cargo.toml  tauri.conf.json
worktreehq/src-tauri/capabilities/: default.json
worktreehq/src-tauri/src/: error.rs  lib.rs  main.rs
worktreehq/src-tauri/src/commands/: git_exec.rs  mod.rs  notepads.rs
(+56 files in other folders)
