[package]
name = "worktreehq"
version = "0.1.0"
description = "A squash-merge-aware git worktree dashboard for developers running parallel AI coding sessions."
authors = ["Adam Miller"]
edition = "2021"
license-file = "../LICENSE.md"
repository = "https://github.com/adamjgmiller/worktreehq"
homepage = "https://github.com/adamjgmiller/worktreehq"
readme = "../README.md"

[lib]
name = "worktreehq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
notify = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
anyhow = "1"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
